# Interprize

./: .gitignore  131212docx.docx  CMakeLists.txt  interpreter.cpp  interpreter.h  lexer.h  parser.cpp  symbol_table.cpp
inter/: Claude Руслан.docx
inter/Rim_IV/: debug.h  interpreter.h  iterp  ka_lex  lexer.h  main.cpp  parser.h  poliz.h  symtable.h  token.h
inter/Rim_IV/Docs/: REPORT.md  ka_lex
inter/Rim_IV/test/friend2/: interp  iterp  main.cpp  poliz.h  symtable.h  test_a5.ml  test_a9.ml  test_b1.ml  test_b9.ml  token.h
inter/claude/: РУКОВОДСТВО_friend.txt
inter/claude/friend/: interp  test_a10.ml  test_a7.ml  test_a8.ml  test_b2.ml  test_b7.ml
inter/Руслан 2/: Ответ claude.docx
inter/Руслан2/: interpreter.h  lexer.h  symtable.h
inter/Руслан2/test/friend2/: test_a1.ml  test_a5.ml  test_a6.ml  test_b3.ml  test_b5.ml  test_b6.ml  test_b8.ml
inter/файлы claude/friend/: REPORT.md  main.cpp  test_a2.ml  test_a3.ml  test_a4.ml  test_b10.ml  test_b4.ml
old/: interpreter.cpp  interpreter.h  lexer.cpp  main.cpp  parser.cpp  parser.h  poliz.cpp  poliz.h  struct.txt  symbol_table.cpp  symbol_table.h  token.cpp  token.h  value.cpp  value.h
